[gd_scene load_steps=17 format=3 uid="uid://dylcgkrjank6r"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_s2u4s"]
[ext_resource type="Texture2D" uid="uid://do2ia5utt5fqg" path="res://Assets/kenney_space-shooter-redux/PNG/Enemies/enemyBlack1.png" id="2_ffuqd"]
[ext_resource type="Texture2D" uid="uid://cry71j6wati7u" path="res://Assets/explosion.png" id="3_dy3bl"]
[ext_resource type="AudioStream" uid="uid://dl1nw3umv7ios" path="res://Assets/Audio/hit.wav" id="4_jhxlo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7reh"]
size = Vector2(75, 86)

[sub_resource type="Gradient" id="Gradient_a6x1v"]
colors = PackedColorArray(0, 0, 0, 0.466667, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7dx7g"]
gradient = SubResource("Gradient_a6x1v")

[sub_resource type="Curve" id="Curve_d465m"]
_data = [Vector2(0, 0.901379), 0.0, 0.0, 0, 0, Vector2(0.993174, 0.255862), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2y3to"]
curve = SubResource("Curve_d465m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vvted"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
gravity = Vector3(50, 0, 0)
scale_min = 9.0
scale_max = 15.0
scale_curve = SubResource("CurveTexture_2y3to")
color_ramp = SubResource("GradientTexture1D_7dx7g")

[sub_resource type="AtlasTexture" id="AtlasTexture_yi73i"]
atlas = ExtResource("3_dy3bl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rio7w"]
atlas = ExtResource("3_dy3bl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0tlm"]
atlas = ExtResource("3_dy3bl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_27uqi"]
atlas = ExtResource("3_dy3bl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eebpg"]
atlas = ExtResource("3_dy3bl")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewm1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi73i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rio7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0tlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27uqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eebpg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 9
script = ExtResource("1_s2u4s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("2_ffuqd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.5, -1)
shape = SubResource("RectangleShape2D_r7reh")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(46.6667, -3.8147e-06)
amount = 30
process_material = SubResource("ParticleProcessMaterial_vvted")
lifetime = 1.2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-106, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ewm1d")
frame_progress = 0.2047

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jhxlo")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
